<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tvDashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="50sp"
        android:text="Dashboard" />

    <Button
        android:id="@+id/btnTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="show" />

</RelativeLayout>